--- a/cv.css
+++ b/cv.css
@@ -89,5 +89,27 @@ section {
 /*--Right side main section---- */
 .main {
   width: 65%;
-  padding: 50px;
+ 
+}
+.main .head {
+  padding: 40px 20px;
+  text-align: center;
+  background: linear-gradient(135deg, #a5a5a5, #e2e8f0);
+  border-bottom: 3px solid #3b82f6;
+}
+
+.head h1 {
+  font-size: 48px;
+  font-weight: 800;
+  letter-spacing: 3px;
+  color: #0f172a;
+}
+
+.head h3 {
+  margin-top: 10px;
+  font-size: 16px;
+  letter-spacing: 4px;
+  font-weight: 500;
+  color: #3b82f6;
+  text-transform: uppercase;
 }
