--- a/cv.css
+++ b/cv.css
@@ -67,7 +67,7 @@ section {
  
 .left-side-details i {
   color: #3b82f6;
-  font-size: 15px;
+  font-size: 20px;
   min-width: 18px;
 }
  
@@ -112,4 +112,51 @@ section {
   font-weight: 500;
   color: #3b82f6;
   text-transform: uppercase;
+}
+.main-details {
+    padding: 20px;
+}
+
+ 
+.main-details h1{
+  font-size: 18px;
+  color: #0f172a;
+  margin: 30px 0 10px;
+  letter-spacing: 1px;
+  border-bottom: 2px solid #3b82f6;
+  display: inline-block;
+  padding-bottom: 5px;
+}
+ 
+.main-details h2{
+  font-size: 16px;
+  font-weight: 600;
+  color: #1e293b;
+  margin-top: 18px;
+}
+
+ 
+.main-details p{
+  font-size: 14px;
+  line-height: 1.7;
+  color: #475569;
+  margin-top: 6px;
+}
+ 
+.main-details span{
+  font-weight: 600;
+  color: #1e293b;
+}
+ 
+.main-details a{
+  color: #3b82f6;
+  text-decoration: none;
+  margin-left: 5px;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.main-details a:hover{
+  color: #1d4ed8;
+  text-decoration: underline;
 }
